# karawanko

./: Japan7_karas.iddump.json  Japan7_karas.yaml  imports.json  pyproject.toml  wankoexport.schema.json
karawanko/: __init__.py  wankoexport.py  wankoimports.py  wankomigrate.py  wankomuxinst.py  wankoparse.py  wankosubcheck.py
tests/: test_parser.py
