[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karawanko"
dynamic = ["version"]
license = "GPL-3.0-or-later"
dependencies = [
    "typer",
    "rich",
    "requests",
    "pydantic",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/odrling/karawanko"
Repository = "https://github.com/odrling/karawanko.git"
Issues = "https://github.com/odrling/karawanko/issues"

[project.scripts]
wankoparse = "karawanko.wankoparse:main"
wankoexport = "karawanko.wankoexport:main"
wankoschema = "karawanko.wankoexport:json_schema"

[tool.hatch.version]
path = "karawanko/__init__.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "I"]

